# blog-fasthtml

./: components.py  email_sender.py  main.py  pyproject.toml  railway.toml  redirects.json  requirements.txt
content/: projects.yaml
pages/: about.md
posts/: llm-structured-output.md  llm-vision.md  nb-blog.ipynb  pydantic-agents-img-doc.ipynb  pydantic-agents.ipynb  pydantic-ai-evals-summary.ipynb
public/: style.css
