[project]
name = "blog-fasthtml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "feedgen>=1.0.0",
    "jupyter>=1.1.1",
    "markdown>=3.7",
    "nb2fasthtml @ git+https://github.com/answerdotai/nb2fasthtml.git@main",
    "notebook>=7.3.2",
    "python-fasthtml>=0.10.3",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
]