[project]
name = "blog-fasthtml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "anthropic>=0.42.0",
    "boto3>=1.35.92",
    "feedgen>=1.0.0",
    "jupyter>=1.1.1",
    "logfire>=2.11.1",
    "markdown>=3.7",
    "matplotlib>=3.10.0",
    "nb2fasthtml @ git+https://github.com/answerdotai/nb2fasthtml.git@main",
    "notebook>=7.3.2",
    "pydantic-ai==0.0.36",
    "pydantic-ai-slim[bedrock]>=0.0.36",
    "pydantic-graph==0.0.36",
    "python-fasthtml>=0.10.3",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "uv>=0.5.13",
]
